<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app"
    tools:context="com.leondev.humovil.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="436dp"
        android:layout_height="511dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/btnPlanta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPlanta"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="36dp" />

        <Button
            android:id="@+id/btnOem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOem"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="126dp" />

        <Button
            android:id="@+id/btnCons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCons"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="214dp" />

        <Button
            android:id="@+id/btnProg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnProg"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="308dp" />

        <Button
            android:id="@+id/btnWOA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnWOA"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="397dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
